CSS para landing PICEC

--- a/sites/all/themes/camaleon/css/camaleon.styles.css
+++ b/sites/all/themes/camaleon/css/camaleon.styles.css
@@ -1035,44 +1035,44 @@ input.form-submit:hover {
 
 /* ---------- PICEC Landing ----------- */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031069}}
-.page-node-30 .breadcrumb {
+.section-picec .breadcrumb {
   display: none;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031072}}
-.page-node-30 .l-page {
+.section-picec .l-page {
   background: url("../images/bg-picec.png") fixed center;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031075}}
-.page-node-30 h1 {
+.section-picec h1 {
   text-align: center;
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.32);
   color: #fff;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031081}}
-.page-node-30 article .head {
+.section-picec article .head {
   background: url("../images/logo-picec-512.png") no-repeat center;
   height: 512px;
   width: 100%;
   margin: auto;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031087}}
-.page-node-30 article h2 {
+.section-picec article h2 {
   text-align: center;
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.32);
   color: #fff;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031094}}
-.page-node-30 .button {
+.section-picec .button {
   width: 45%;
   float: left;
   margin: 1em;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031100}}
-.page-node-30 .features {
+.section-picec .features {
   min-height: 30em;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031102}}
-.page-node-30 .features .feature {
+.section-picec .features .feature {
   width: 30%;
   float: left;
   margin: 1em;
@@ -1081,20 +1081,20 @@ input.form-submit:hover {
   color: #fff;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031103}}
-.page-node-30 .features .feature h1, .page-node-30 .features .feature h2 {
+.section-picec .features .feature h1, .section-picec .features .feature h2 {
   text-align: left;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031112}}
-.page-node-30 .features .feature p {
+.section-picec .features .feature p {
   color: #ddd;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031119}}
-.page-node-30 .more-features {
+.section-picec .more-features {
   background: url("../images/footer_lodyas.png");
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000031127}}
-.button, .page-node-30 .button {
+.button, .section-picec .button {
   text-align: center;
   background-color: #13a9e2;
   display: block;
@@ -2451,7 +2451,7 @@ div.password-confirm {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.34-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/camaleon\/sass\/camaleon\.styles\.scss}line{font-family:\000032234}}
 input.form-submit,
 a.button,
-.page-node-30 a.button {
+.section-picec a.button {
   /*background: #fff url(../images/buttons.png) 0 0 repeat-x;
   border: 1px solid #e4e4e4;
   border-bottom: 1px solid #b4b4b4;
