--- a/sites/all/themes/camaleon/sass/camaleon.styles.scss
+++ b/sites/all/themes/camaleon/sass/camaleon.styles.scss
@@ -1065,7 +1065,7 @@ ul.action-links{
 
 /* ---------- PICEC Landing ----------- */
 
-.page-node-30{
+.section-picec{
 	.breadcrumb{
 		display: none;
 	}
