--- a/sites/all/themes/camaleon/sass/camaleon.styles.scss
+++ b/sites/all/themes/camaleon/sass/camaleon.styles.scss
@@ -279,6 +279,7 @@ body.admin-menu{
 	ul{
 
 	padding: 0;
+	margin: 0;
 
 	@include breakpoint($tablet){
 
@@ -286,22 +287,108 @@ body.admin-menu{
 
 	}
 
+	li.expanded{
+		position: relative;
+		display: block;
+		@include breakpoint($tablet){
+			display: flex;
+		}
+		a{
+			/*width: 100%;
+			float: left;*/
+		}
 
-		li.leaf{
+		a:hover{
+			@include breakpoint($tablet){
+				background-color: #3d8ddd !important;
+				color: #fff !important;
+			}
+
+		}
+
+
+		i{
+			color: white;
+			position: absolute;
+			z-index: 999;
+			top: 0;
+			right: 0;
+			padding: 0 0.5em;
+			display: inline-block;
+			padding: 0em;
+			width: 20%;
+			text-align: center;
+			float: left;
+			padding: 1.57em;
+			border-bottom: 1px solid $white;
+			//background-color: #79a9e5;
+			@include breakpoint($tablet){
+				padding: 0.35em;
+				//background-color: #195591;
+				position: relative;
+				width: 20%;
+				border-bottom: 0px;
+			}
+		}
+
+		ul.menu{
+			display: none;
+			position: relative;
+			left: 0;
+			top: 0;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			@include breakpoint($tablet){
+				width: 15em;
+				top: 2.15em;
+				left: 0em;
+				position: absolute;
+			}
+			@include breakpoint($desktop){
+				top: 4.6em;
+				left: 0em;
+			}
+			
+			li{
+				width: 100%;
+				background-color: #3d8ddd;
+				border-bottom: 1px solid #79a9e5;
+				a{
+					padding: 2em 5em;
+					margin: 0;
+					@include breakpoint($tablet){
+						padding: 1em 1.5em;
+					}
+				}
+				a:hover{
+					@include breakpoint($tablet){
+						background-color: #79a9e5 !important;
+						color: #fff !important;
+					}
+
+				}
+			}
+		}
+		
+	}
+
+
+		li.leaf, li.expanded{
 			list-style: none;
 			float: left;
 			margin: 1em 0;
 			width: 100%;
 			@include breakpoint($tablet){
 				width: auto;
-				margin: 1.5em 0.25em;
+				margin: 0;
 			}
 
 			a{
-				padding: 8px 15px;
+				padding: 30px 15px;
 				color: #fff;
 				text-decoration: none;
-				border-radius: 200px;
+				// border-radius: 200px;
 				font-family: Montserrat-Light;
 				text-transform: uppercase;
 				// letter-spacing: -0.05em;
@@ -320,7 +407,7 @@ body.admin-menu{
 			a:hover{
 				background-color: $vivid-blue;
 				color: #fff;
-				border-radius: 200px;
+				// border-radius: 200px;
 			}
 			a.active{
 				background-color: $vivid-blue;
@@ -1367,6 +1454,75 @@ div.flexslider div.field-content {
 		position: relative;
 		height: 475px;
 		background: url("../images/bg-picec.png") fixed center;
+		background-size: 500%;
+		background-position: 50% 0%;
+		clear: both;
+		z-index: 99;
+
+		@include breakpoint($tablet){
+			background-size: 175%;
+			background-position: 50% 0%;
+			
+		}
+
+		@include breakpoint($desktop){
+			background-size: 150%;
+			background-position: 50% 0%;
+			
+		}
+
+		@include breakpoint($large-desktop){
+			background-size: 150%;
+			background-position: 50% 0%;
+					
+
+		}
+
+		h1{
+			font-weight: 300;
+			line-height: 1.2em;
+			-webkit-backface-visibility: hidden;
+			padding: 160px 0 0 0;
+			margin: 0;
+			text-align: left;
+			font-size: 32px;
+			@include breakpoint($tablet){
+				font-size: 42px;
+			}
+		}
+		img{
+			position: absolute;
+			top: 150px;
+			right: 0px;
+			width: 132px;
+			@include breakpoint($tablet){
+				right: 0px;
+				width: 300px;
+				top: 120px;
+			}
+
+			@include breakpoint($desktop){
+				right: 100px;
+				width: 360px;
+				top: 110px;
+			}
+		}
+
+		.button{
+			width: 10em;
+			margin: auto;
+			@include breakpoint($tablet){
+				width: 15em;
+				margin: 0;
+			}
+		}
+	}
+
+	.community{
+
+		position: relative;
+		height: 475px;
+		background: url("../images/bg-community.png") fixed center;
 		background-size: 500%;
 		background-position: 50% 0%;
 
