--- a/sites/all/themes/camaleon/sass/camaleon.styles.scss
+++ b/sites/all/themes/camaleon/sass/camaleon.styles.scss
@@ -83,28 +83,28 @@ $large-desktop: 1280px;
 
 @font-face {
     font-family: 'BebasNeue Thin';
-    src: url('../fonts/bebas/ttf/BebasNeue Thin.ttf') format('truetype');
+    src: url('../fonts/bebas/ttf/BebasNeue-Thin.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'BebasNeue Light';
-    src: url('../fonts/bebas/ttf/BebasNeue Light.ttf') format('truetype');
+    src: url('../fonts/bebas/ttf/BebasNeue-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'BebasNeue Regular';
-    src: url('../fonts/bebas/ttf/BebasNeue Regular.ttf') format('truetype');
+    src: url('../fonts/bebas/ttf/BebasNeue-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'BebasNeue Bold';
-    src: url('../fonts/bebas/ttf/BebasNeue Bold.ttf') format('truetype');
+    src: url('../fonts/bebas/ttf/BebasNeue-Bold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
