--- a/sites/all/themes/camaleon/sass/camaleon.styles.scss
+++ b/sites/all/themes/camaleon/sass/camaleon.styles.scss
@@ -3962,13 +3962,13 @@ footer,
 
 .panel-collapse p b {
 
-    color: #000;
+    color: #00599a;
 
 }
 
 .eventime_button:hover {
 
-    color: #000 !important;
+    color: #00599a !important;
 
 }
 
